Fix overflow of large parameters in doc

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -1,3 +1,7 @@
 object#TOC {
     max-width: 100%;
 }
+
+div[itemprop="articleBody"] {
+    word-wrap: break-word;
+}
